<resources>
    <string name="app_name">GreenHome</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="name">Your name</string>
    <string name="age">Age</string>
    <string name="Born">Birthday</string>
    <string name="interests">Interests</string>
    <string name="Phone">Phone number</string>
    <string name="About">About me</string>
    <string name="gender">Gender</string>
    <string name="email">Email</string>
    <string name="What">Let\'s invite friends to go adventure</string>
    <string name="publish">Publish post</string>
    <string name="up">Up</string>
    <string name="image">Images/Videos</string>
    <string name="camera">Camera/ Picture</string>
    <string name="Checkin">Check In</string>
    <string name="want">Where do you want to go?</string>
    <string name="trys">Try with \"Ha Noi\".</string>
    <string name="typing">Start typing......</string>
    <string name="mes">Messenger</string>
    <string name="delivered">Delivered</string>
    <string name="Seen">Seen.</string>
    <string name="lastSeen">Last seen at:</string>
    <string name="delete">Do you want to delete?</string>
    <string name="deleteTitle">Delete</string>
    <string name="y">Yes</string>
    <string name="n">No</string>
    <string name="suggest">Suggests</string>
    <string name="popular">Popular places</string>
    <string name="confirm">Confirm</string>
    <string name="denied">If you reject permission, you can\'t use this service</string>
    <string name="Me">Memorable experience</string>
    <string name="ME_content">In each remote city, keep a warm place for yourself.</string>
    <string name="Homestay">Homestay</string>
    <string name="toprating">Top ratting</string>
    <string name="intro">Introduction</string>
    <string name="Comment">Comment</string>
    <string name="host">Host</string>
    <string name="Amenities">Amenities</string>
    <string name="internet">Internet</string>
    <string name="airconditioner">airconditioner</string>
    <string name="fan">fan</string>
    <string name="water_heater">water heater</string>
    <string name="washing_machine">Washing machine</string>
    <string name="working_desk">Working desk</string>
    <string name="slippers">Slippers</string>
    <string name="camera_security">Camera security</string>
    <string name="sofa">sofa</string>
    <string name="socket">Socket</string>
    <string name="bedroom">Bedroom</string>
    <string name="bathroom">Bathroom</string>
    <string name="kitchen">Kitchen</string>
    <string name="beauty">health and beauty</string>
    <string name="wardrobe">wardrobe</string>
    <string name="clother_hanger">Clother hanger</string>
    <string name="extra_mattress">Extra mattress</string>
    <string name="bathtub">Bathtub</string>
    <string name="bathroom_heater">Bathroom  heater</string>
    <string name="toilet">Toilet</string>
    <string name="shower_booth">Shower booth</string>
    <string name="towel">Towels</string>
    <string name="stove">Stove</string>
    <string name="gas">Gas</string>
    <string name="oven">oven</string>
    <string name="hotpot">Hotpot</string>
    <string name="rice_cooker">Rice cooker</string>
    <string name="noSmoke">✎ Do not use tobacco and stimulants.</string>
    <string name="noPet">✎ Do not bring pets.</string>
    <string name="partying">✎ No partying.</string>
    <string name="noCooking">✎ Do not cook rice on your own.</string>
    <string name="rule">Rules and terms</string>
    <string name="thesameHost">this same host</string>
    <string name="booking">Booking</string>
    <string name="pre"><![CDATA[<-]]></string>
    <string name="after"><![CDATA[->]]></string>
    <string name="recieved">Received date</string>
    <string name="lastday">Last day</string>
    <string name="Adults">Adults</string>
    <string name="children">Children</string>
    <string name="into">you need to pay:</string>
    <string name="cantBookingByYourself">You cannot make a reservation at your own home !</string>
    <string name="success">Success</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="readMore">Read more</string>
    <string name="Readless">Read Less</string>
    <string name="atless1Pic">You need to choose at least 1 photo.</string>
    <string name="needContent">You need enter content post.</string>
    <string name="love">Love</string>
    <string name="near">Search around here</string>
    <string name="viewonmap">View on map</string>
    <string name="myPic">My pictures</string>
    <string name="MyPost">My Posts</string>
    <string-array name="rangeSliderValues">
        <item>100000</item>
        <item>5000000</item>
    </string-array>
    <string name="map">Map</string>
    <string name="update">Update</string>
    <string name="Up">Up</string>
</resources>