<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".AllFragment.Profile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp">

                <TextView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/gender"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/Profile_gender"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="right|center_vertical"
                    android:hint="@string/gender"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:background="#DFDFDF" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp">

                <TextView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/Born"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/Profile_birthday"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="right|center_vertical"
                    android:hint="@string/Born"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:background="#DFDFDF" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp">

                <TextView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/Profile_Email"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="right|center_vertical"
                    android:hint="@string/email"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:background="#DFDFDF" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp">

                <TextView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/Phone"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/Profile_phone"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="right|center_vertical"
                    android:hint="@string/Phone"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:text="@string/MyPost"
                android:textColor="@color/black1"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:background="@drawable/border6"
                android:elevation="@dimen/_8sdp"
                app:cardCornerRadius="@dimen/_15sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_135sdp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_44sdp">

                        <TextView
                            android:id="@+id/name_host"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="@dimen/_20sdp"
                            android:gravity="bottom"
                            android:text="Vũ"
                            android:textColor="@color/black1"
                            android:textSize="@dimen/_12sdp"
                            android:textStyle="bold" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/ImageProfile_host"
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_40sdp"
                            android:layout_alignParentRight="true"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_marginRight="@dimen/_15sdp"
                            android:background="@drawable/border1"
                            android:elevation="@dimen/_3sdp"
                            android:maxWidth="@dimen/_60sdp"
                            android:padding="@dimen/_2sdp"
                            android:src="@drawable/user" />
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@color/black1" />

                    <TextView
                        android:id="@+id/number_Post_of_host"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/border6"
                        android:gravity="center"
                        android:text="25 Bài viết" />

                    <TextView
                        android:id="@+id/number_heart"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_marginLeft="@dimen/_15sdp"
                        android:gravity="center_vertical"
                        android:text="Lượt thích: 1000" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_37sdp"
                        android:layout_marginTop="10dp"
                        android:background="#65FFFFFF"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/_18sdp">

                        <TextView
                            android:id="@+id/Home_UpPost"
                            android:layout_width="1dp"
                            android:layout_height="@dimen/_35sdp"
                            android:layout_marginRight="@dimen/_20sdp"
                            android:layout_weight="9"
                            android:background="@drawable/border_3"
                            android:elevation="@dimen/_1sdp"
                            android:fontFamily="serif"
                            android:gravity="center_vertical"
                            android:hint="Thêm bài viết mới "
                            android:paddingLeft="@dimen/_10sdp"
                            android:textSize="@dimen/_12sdp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/Proflie_myPost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>