<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".BookingFunction.ConfirmBooking">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolb"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="@dimen/_5sdp"
        app:layout_collapseMode="pin">

        <ImageButton
            android:id="@+id/btn_backs"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:background="@drawable/border7"
            android:src="@drawable/ic_baseline_chevron_left_24" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_450sdp"
        android:background="@drawable/ad"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginLeft="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_60sdp"
            android:layout_marginRight="@dimen/_40sdp"
            android:background="#00FFFFFF"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:fontFamily="@font/aclonica"
                android:gravity="center"
                android:text="Wellcome"
                android:textColor="@color/black"
                android:textSize="@dimen/_25sdp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/name_house"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:gravity="center"
                android:text="Vinhome Ocean Pack"
                android:textColor="@color/black1"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/location_house"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/_15sdp"
                android:gravity="center_vertical"
                android:text="Đa Tốn, Gia Lâm, Hà Nội "
                android:textAlignment="viewEnd"
                android:textColor="@color/black1"
                android:textSize="@dimen/_11sdp"
                tools:ignore="RtlCompat" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginLeft="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_40sdp"
            android:background="#00FFFFFF"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/_1sdp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_25sdp"
                    android:gravity="center_vertical"
                    android:text="@string/recieved"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/firstday"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="2/2/2022"
                    android:textColor="@color/black1"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/_1sdp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_25sdp"
                    android:gravity="left|center_vertical"
                    android:text="@string/lastday"
                    android:textAlignment="viewEnd"
                    android:textSize="@dimen/_10sdp"
                    tools:ignore="RtlCompat" />

                <TextView
                    android:id="@+id/lastday"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="5/2/2022"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/black1"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    tools:ignore="RtlCompat" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_40sdp"
            android:background="#00FFFFFF"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/_15sdp"
                        android:gravity="center_vertical"
                        android:text="@string/Adults"
                        android:textColor="@color/black1"
                        android:textSize="@dimen/_14sdp" />

                    <LinearLayout
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_15sdp"
                        android:background="@drawable/border6"
                        android:orientation="horizontal">


                        <EditText
                            android:id="@+id/num_count_Adults"
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:layout_margin="@dimen/_1sdp"
                            android:layout_weight="2"
                            android:background="@drawable/border6"
                            android:enabled="false"
                            android:gravity="center"
                            android:text="0"
                            android:textColor="@color/black1" />

                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/_15sdp"
                        android:gravity="center_vertical"
                        android:text="@string/children"
                        android:textColor="@color/black1"
                        android:textSize="@dimen/_14sdp" />

                    <LinearLayout
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_15sdp"
                        android:background="@drawable/border6"
                        android:orientation="horizontal">


                        <EditText
                            android:id="@+id/num_count_children"
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:layout_margin="@dimen/_1sdp"
                            android:layout_weight="2"
                            android:background="@drawable/border6"
                            android:enabled="false"
                            android:gravity="center"
                            android:text="0"
                            android:textColor="@color/black1" />

                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:layout_marginLeft="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_40sdp"
            android:background="#00FFFFFF"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/_1sdp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textColor="@color/black1"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="1sp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:layout_weight="1"
                    android:gravity="left|center_vertical"
                    android:text="1.520.000 đ"
                    android:textAlignment="viewEnd"
                    android:textColor="#FF0000"
                    android:textSize="@dimen/_16sdp"
                    tools:ignore="RtlCompat" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_checkinfor1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/border_4"
        android:text="@string/confirm"
        android:textColor="@color/black" />
</LinearLayout>